création du niveau 2

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,8 +4,12 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-        	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+            <link rel="preconnect" href="https://fonts.gstatic.com">
+            <link href="https://fonts.googleapis.com/css2?family=Rubik&family=Russo+One&display=swap" rel="stylesheet"> 
         {% endblock %}
+        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>
     <body>
         {% block body %}{% endblock %}
